--- a/bin/application.properties
+++ b/bin/application.properties
@@ -2,7 +2,7 @@ spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/systemDemo?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=Lsm870720!
+spring.datasource.password=xxxxxxxx
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
