--- a/bin/application.properties
+++ b/bin/application.properties
@@ -2,15 +2,22 @@ spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/systemDemo?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=xxxxxxxx
+spring.datasource.password=Lsm870720!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
 spring.output.ansi.enabled=always
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 logging.level.com.sm.system=DEBUG
-logging.level.org.springframework.security=info
-logging.level.org.springframework.web=error
+logging.level.org.springframework.security=debug
+#logging.level.org.springframework.web=error
+
+#logging.pattern.console=%date %-5level %logger{0} - %msg%n 
+
+
 spring.jackson.serialization.indent-output=true
 
 spring.http.encoding.force=true
