--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.check-template=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/systemDemo?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=Lsm870720!
+spring.datasource.password=eastwind+1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
