--- a/bin/application.properties
+++ b/bin/application.properties
@@ -3,9 +3,11 @@ spring.thymeleaf.check-template=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/systemDemo?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=eastwind+1
+spring.datasource.password=xxxxxx
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false    
+spring.jpa.show-sql=true
 
 
 spring.output.ansi.enabled=always
